--- a/link-lock/index.html
+++ b/link-lock/index.html
@@ -47,9 +47,9 @@
   <div class="error red-border" style="display: none">
     <p id="errortext">Error bro</p>
     <button onclick="main()">Coba Lagi Bro</button>
-    <a href="https://typographuniverse.github.io//link-lock"><button>Buka Link</button></a>
-    <a href="https://typographuniverse.github.io/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
-    <a href="https://typographuniverse.github.io/hidden/" id="hidden" target="_blank"><button>Create hidden bookmark</button></a>
+    <a href="https://lightstarr.github.io//link-lock"><button>Buka Link</button></a>
+    <a href="https://lightstarr.github.io/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
+    <a href="https://lightstarr.github.io/hidden/" id="hidden" target="_blank"><button>Create hidden bookmark</button></a>
         </div>
 </body>
 
