--- a/link-lock/index.html
+++ b/link-lock/index.html
@@ -28,7 +28,7 @@
     <p>Jika Anda melihat ini, berarti JavaScript Anda dinonaktifkan. Harap aktifkan JavaScript untuk mengakses tautan terkunci.</p>
 
     <p>Aplikasi ini sepenuhnya diprogram dalam JavaScript. Ini dilakukan dengan sengaja, agar semua enkripsi dan dekripsi terjadi di sisi klien. Ini berarti kode berjalan sebagai aplikasi terdistribusi, hanya mengandalkan Halaman GitHub untuk infrastruktur. Ini juga berarti bahwa tidak ada data tentang tautan terkunci yang pernah disimpan di server. Kode dirancang agar dapat diaudit sehingga pengguna dapat menyelidiki apa yang terjadi di balik layar.</p>
-    <p>Jika Anda masih ingin menjalankan aplikasi, saya anjurkan Anda mengkloning <a href="https://typographuniverse.github.io//link-lock">kode sumber di GitHub</a>. Dengan demikian, Anda dapat menonaktifkan JavaScript hanya untuk file tepercaya di mesin lokal Anda.</p>
+    <p>Jika Anda masih ingin menjalankan aplikasi, saya anjurkan Anda mengkloning <a href="https://lightstarr.github.io///link-lock">kode sumber di GitHub</a>. Dengan demikian, Anda dapat menonaktifkan JavaScript hanya untuk file tepercaya di mesin lokal Anda.</p>
   </div>
   </noscript>
 
